<resources>
    <string name="app_name">Dog-test</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Settings">Settings</string>
    <string name="Home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="General">General</string>
    <string name="Menu">Menu</string>
    <string name="main_activity_header">Main Activity Header</string>
    <string name="Logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_passowrd">Change Password</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="add_new_dog">Add New Dog</string>
    <string name="add_dog">Add Dog</string>
    <string name="dog_name">Name</string>
    <string name="dog_breed">Breed</string>
    <string name="dog_age">Age</string>
    <string name="dog_weight">Weight</string>
    <string name="dog_vaccinated">Vaccinated?</string>
    <string name="dog_sterilized">Sterilized?</string>
    <string name="dog_bio">Bio</string>
    <string name="add_picture">Add Picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>