<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/Home"
            android:visible="true"/>
        <item
            android:id="@+id/addDog"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/add_new_dog"
            android:visible="false"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/Settings"
            android:visible="true"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/Logout"
            android:visible="true"/>
    </group>
</menu>